# SaliencyDetection

./: .gitignore  PaperList.md  README.md  Tasks.md
Source/: CMakeLists.txt  eval.sh  gtnames.txt  images with bad results  main.cpp  myfile.yml
Source/include/: gauss_pyr.h  laplacian_pyr.h  oriented_pyr.h
Source/results/: result_all.txt  result_all1.txt  result_all2.txt  result_all_max.txt  result_all_max_2.txt  result_all_mean.txt  result_all_mean_2.txt  result_all_unique.txt  result_all_unique_2.txt
Source/src/: gauss_pyr.cpp  laplacian_pyr.cpp  main.cpp  main2.cpp  oriented_pyr.cpp
Source/src_py/: ImageResize.py  X_test.npy  X_validation.npy  compare.py  data_processing.py  evaluate_test_set.py  method1_result_all.txt  method2_result_all.txt  method_DL_result_all.txt  method_gt_result_all.txt  model_train.py  read_file.py  y_test.npy  y_validation.npy
